# lfi-benchmark

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
script/gaussian/batch/: array_params.txt  one_np.sh
script/gaussian/dev/: one_np.py
script/higgs/: generate_data.ipynb  seven_nps.py  two_params.py  two_params.sh
src/lfibm/: __init__.py
src/lfibm/estimator/: __init__.py  likelihood.py
src/lfibm/simulator/: __init__.py  higgs.py
src/lfibm/utils/: __init__.py  data_generation.py  parallel.py
